--- a/react/package.json
+++ b/react/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6"
   },
