--- a/react/package.json
+++ b/react/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --dev-client --port 8087",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "totaal": "npm run free-port && concurrently \"py ../manage.py runserver 8000\" \"npm start\"",
+    "free-port": "powershell -Command \"Get-NetTCPConnection -LocalPort 8087 -ErrorAction SilentlyContinue | Select-Object -ExpandProperty OwningProcess | ForEach-Object { Stop-Process -Id $_ -Force }\" || echo Port 8087 is free"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
@@ -24,7 +26,8 @@
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "concurrently": "^8.2.2"
   },
   "private": true
 }
