--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,8 @@
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
