--- a/react/package.json
+++ b/react/package.json
@@ -25,7 +25,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-gesture-handler": "^2.16.1",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6"
   },
