--- a/react/package.json
+++ b/react/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.73.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-progress": "^5.0.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6"
   },
