--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
 Pillow
+celery[redis]==5.3.1
+redis==5.0.0
+django-celery-beat==2.6.0
