--- a/react/package.json
+++ b/react/package.json
@@ -28,6 +28,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-progress": "^5.0.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6"
